--- a/style.css
+++ b/style.css
@@ -1113,7 +1113,7 @@ main.main > section.side > .company > ul.footer-list {
   flex-flow: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 10px;
 }
 
