--- a/style.css
+++ b/style.css
@@ -790,13 +790,14 @@ main.main > article.content .head > .by {
   gap: 5px;
   color: var(--gray-color);
   font-family: var(--font-mono), monospace;
-  font-size: 0.9rem;
+  /* font-family: var(--font-read), sans-serif; */
+  font-size: 1rem;
 }
 
 main.main > article.content .head > .by a {
   text-decoration: none;
   color: var(--text-color);
-  font-family: var(--font-text), sans-serif;
+  font-family: var(--font-read), sans-serif;
   font-size: 1rem;
 }
 
