--- a/res.css
+++ b/res.css
@@ -151,7 +151,7 @@
   header.header > ul.left > .account > a.login {
     border: 0.002rem solid #6b72808f;
     padding: 10px 0;
-    color: #1f2937;
+    color: var(--title-color);
     text-align: center;
   }
 
@@ -181,8 +181,8 @@
   header.header > ul.left > li.logout > a,
   header.header > ul.left > .account > a.settings,
   header.header > ul.left > .account > a.profile {
-    border: 0.002rem solid #6b72809a;
-    color: #1f2937;
+    border: var(--border-header);
+    color: var(--title-color);
     padding: 2px 5px 2px 10px;
     min-height: 40px;
     height: 40px;
@@ -232,7 +232,7 @@
   header.header > ul.left > .account > a > span.text {
     /* border: 0.002rem solid #6b72808f; */
     font-weight: 600;
-    color: #1f2937;
+    color: var(--title-color);
     text-align: center;
   }
 
@@ -244,23 +244,23 @@
 
 
   header.header > ul.left > li.link {
-    /* border: 3px solid #ff00ff; */
-    border: 0.002rem solid #6b7280a9;
+    /*border: 3px solid #ff00ff;
+    */border-top: var(--border-header);
     min-width: 100%;
     width: 100%;
     margin: 8px 0;
-    padding: 10px 5px 10px 10px;
+    padding: 10px 0;
     height: max-content;
     display: flex;
     flex-flow: column;
     align-items: stretch;
     justify-content: space-between;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-}
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+  }
 
 
   header.header > ul.left > li.link.active,
@@ -292,19 +292,27 @@
     font-family: inherit;
   }
 
-  header.header > ul.left > li.link span.link-item > span.text,
   header.header > ul.left > li.link a {
     /* border: 1px solid black; */
     /* color: #4b5563; */
-    color: #1f2937;
+    color: var(--title-color);
     font-weight: 600;
     cursor: pointer;
     font-family: inherit;
   }
 
+  header.header > ul.left > li.link span.link-item > span.text {
+    /* border: 1px solid black; */
+    color: var(--title-color);
+    font-weight: 600;
+    margin: 0 0 0 3px;
+    cursor: pointer;
+    font-family: inherit;
+  }
+
   header.header > ul.left > li.link > div.drop-down {
-    border: 1px solid #0059ff;
-    /* border: none; */
+    /* border: 1px solid #0059ff; */
+    border: none;
     display: flex;
     padding: 10px 0 0 0;
     min-width: 100%;
@@ -345,7 +353,7 @@
   }
 
   header.header > ul.left > li.link > div.drop-down > ul.main {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 100%;
     margin: 0;
     padding: 0;
@@ -365,23 +373,22 @@
   }
 
   header.header > ul.left > li.link > div.drop-down ul.main > li {
-    border: 2px solid #057232;
+    /* border: 2px solid #057232; */
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0;
     margin: 0;
-    padding: 0;
+    padding: 8px 0;
   }
 
   header.header > ul.left > li.link > div.drop-down ul.main > li > a {
     /* border: 0.002rem solid #6b72809a; */
-    color: #1f2937;
-    padding: 4px 5px 2px 10px;
-    min-height: 40px;
-    height: 40px;
+    color: var(--title-color);
+    padding: 0;
+    padding: 0 10px;
     display: flex;
-    flex-flow: row-reverse;
+    flex-flow: row;
     align-items: center;
     justify-content: space-between;
     border-radius: 10px;
@@ -391,7 +398,7 @@
     -o-border-radius: 10px;
   }
 
-  header.header > ul.left > li.link > div.drop-down ul.main > li:nth-of-type(odd) > a {
+  header.header > ul.left > li.link > div.drop-down ul.main > li:nth-of-type(odd) {
     background-color: #6b728021;
   }
 
@@ -402,6 +409,7 @@
   header.header > ul > li.link > div.drop-down ul > li svg {
     /* border: 1px solid red; */
     color: var(--gray-color);
+    display: none;
     width: 30px;
     height: 30px;
     margin: -2px 0 0 -8px;
@@ -436,19 +444,24 @@
   }
 
   header.header > ul > li.link > div.drop-down ul > li a span.content {
-    margin: 0 0 0 0px;
+    margin: 0;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-flow: column;
+    line-height: 1.5;
+    gap: 0;
+    width: 100%;
   }
 
   header.header > ul > li.link > div.drop-down ul > li a span.content h5 {
     /* border: 1px solid red; */
     font-weight: 500;
     font-size: 1rem;
-    line-height: 1.5;
     color: var(--gray-color);
   }
 
   header.header > ul > li.link > div.drop-down ul > li a span.content span.text {
-    display: none;
+    display: flex;
   }
 
   footer.footer {
