--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ Author URL: https://femar.co.ke
 
   --story-border-mobile: thin solid #6b728046;
   --border-mobile: thin solid #6b728088;
+  --border-header: 0.002rem solid #6b72809a;
 
   --background: #ffffff;
   --vh-height: 100dvh;
