--- a/res.css
+++ b/res.css
@@ -54,7 +54,7 @@
   }
 
   header.header > ul.left {
-    border: 5px solid black;
+    /* border: 5px solid black; */
     background-color: var(--background);
     position: fixed;
     left: calc(100% + 15px);
