--- a/style.css
+++ b/style.css
@@ -6,99 +6,7 @@ URL: https://github.com/fescii/femar.git
 Author: Fredrick Femar Ochieng
 Author URL: https://femar.co.ke
 
-
-/*
-
-  Fonts
-  =====
-
 */
-
-
-/* @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap'); */
-
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-/*
-
-  Variables
-  =========
-
-*/
-
-:root {
-  --font-main: "Inter";
-  --font-text: "DM Sans";
-  --font-mono: 'Jetbrains Mono';
-  --font-read: "Work Sans";
-  --scroll-bar-background: #DDDDD7;
-  --scroll-bar-linear: linear-gradient(#53595f, #627ea0);
-
-  --input-border: 1px solid #6b72805e;
-  --input-border-focus: 1px solid #18a5669a;
-  --action-border: 1px solid #6b72803f;
-  --story-border: thin solid #6b72801a;
-
-  --story-border-mobile: thin solid #6b728046;
-  --border-mobile: thin solid #6b728088;
-  --border-header: 0.002rem solid #6b72809a;
-
-  --background: #ffffff;
-  --vh-height: 100dvh;
-
-  --action-background: #1d2c38d2;
-
-  --author-background: #f1f3f4;
-  --user-background: #f8f8f8;
-  --dot-background: #6b7280c9;
-  --hover-background: #f8f8f8;
-
-  --accent-color: #08b86f;
-  --white-color: #ffffff;
-  --gray-color: #6b7280;
-  --text-color: #53595f;
-  --read-color: #333333;
-  --title-color: #1f2937;
-  --color-alt: #ff932f;
-  --action-color: #1d2c38;
-  --anchor: #4b556321;
-  --anchor-active: #21D029;
-
-  --open-line: 2px solid #08b86f93;
-  --open-line-mobile: 2px solid #08b86fc5;
-  --close-line: 2px solid #6b72803a;
-
-  --modal-shadow: 0 12px 48px #6d758d33;
-  --modal-border: 1px solid #83858442;
-  --modal-overlay: #1d2534b3;
-
-  /* --option-background: linear-gradient(#53595f71, #627ea034); */
-
-  --second-linear: linear-gradient(0deg,#df791a 0%, #f09c4e 100%);
-
-  --accent-linear: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
-  --alt-linear: linear-gradient(78deg, rgb(31, 6, 71) -50%, rgb(48, 0, 130) 28.67%, rgb(143, 0, 153) 57.79%, rgba(238, 0, 176, 0.85) 76.05%, rgb(247, 95, 98) 88.54%, rgb(255, 190, 20));
-  --loader-gradient: linear-gradient(-45deg, #ececec, #f8f8f8, #DDDDDD, #f8f8f8, #ececec);
-  --fade-linear-gradient: linear-gradient(
-    180deg, #ffffff02,
-    #ffffff2a,
-    #ffffff4d,
-    #ffffff69,
-    #ffffff83,
-    #ffffffa4,
-    #ffffffc2,
-    #ffffffe0,
-    #fffffff6,
-    #ffffff
-  );
-  --fade-picture-gradient: linear-gradient(180deg,
-  rgba(0, 0, 0, 0),
-  rgba(0, 0, 0, 0.8)
-  );
-}
 
 *,
 *:after,
@@ -201,6 +109,165 @@ Typography End
 ==============
 
 */
+
+section.top {
+  border-bottom: var(--story-border);
+  display: flex;
+  gap: 5px;
+  padding: 0 0 10px 0;
+  margin: 10px 0 0 0;
+}
+
+section.top > .profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+section.top > .profile > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+section.top > .info {
+  /* border: var(--story-border); */
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+  font-family: var(--font-main), sans-serif;
+}
+
+section.top > .info > .name {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+section.top > .info > .name > a {
+  color: var(--text-color);
+  text-decoration: none;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+section.top > .info > .name > a:hover {
+  text-decoration: underline;
+}
+
+section.top > .info > .name > a > .username {
+  color: var(--gray-color);
+  display: inline-block;
+  margin-bottom: -2px;
+  font-size: 0.8rem;
+  font-family: var(--font-mono), monospace;
+  font-weight: 500;
+}
+
+section.top > .info > .foot {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  color: var(--gray-color);
+  font-family: var(--font-read), sans-serif;
+  font-size: 0.95rem;
+}
+
+section.top > .info > .foot > .since {
+  font-size: 0.9rem;
+  font-family: var(--font-read), sans-serif;
+}
+
+main.profile {
+  padding: 15px 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 0px;
+  min-height: 60vh;
+}
+
+
+section.tab {
+  /* border: 1px solid #53595f; */
+  padding: 0;
+  width: 35%;
+  display: flex;
+  flex-flow: column;
+  gap: 15px;
+  height: max-content;
+}
+
+section.tab > ul.tab {
+  list-style-type: none;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: column;
+  gap: 0;
+}
+
+section.tab > ul.tab > li.tab-item {
+  position: relative;
+  padding: 6px 10px;
+  color: var(--text-color);
+  font-family: var(--font-text), sans-serif;
+  margin: 0;
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 5px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+section.tab > ul.tab > li.tab-item.active {
+  /* border: 1px solid #6b7280; */
+  background-color: var(--tab-background);
+}
+
+section.tab > ul.tab > li.tab-item > span.line {
+  position: absolute;
+  display: none;
+  left: -10px;
+  top: calc(30% / 2);
+  width: 4px;
+  height: 70%;
+  background: var(--accent-linear);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+section.tab > ul.tab > li.tab-item.active > span.line {
+  display: inline-block;
+}
+
+section.content {
+  border: 1px solid #6b7280;
+  display: flex;
+  flex-flow: column;
+  align-items: start;
+  gap: 0;
+  width: 63%;
+}
 
 
 /*Footer*/
