--- a/style.css
+++ b/style.css
@@ -592,6 +592,24 @@ form.fields .image-preview-container img {
   border-radius: 20px;
 }
 
+form.fields .image-preview-container input+label {
+  display: inline-block;
+  width: max-content;
+  height: 30px;
+  margin-bottom: 0;
+  border-radius: 100%;
+  background-color: #ffffff45;
+  border: 1px solid transparent;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  font-weight: normal;
+  transition: all 0.2s ease-in-out;
+  transform: translateY(-50%);
+}
+
 form.fields .image-preview-container input {
   display: none;
 }
@@ -600,6 +618,7 @@ form.fields .image-preview-container label {
   position: absolute;
   top: 50%;
   padding: 7px 12px;
+  z-index: 5;
   margin: 0;
   text-align: center;
   background: var(--accent-linear);
